@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,6 @@
 
 package jdk.javadoc.internal.doclets.toolkit.taglets;
 
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -35,13 +34,13 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.lang.model.element.Element;
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.type.ExecutableType;
 import javax.lang.model.type.TypeMirror;
+import javax.lang.model.util.Types;
 
 import com.sun.source.doctree.DocTree;
 import com.sun.source.doctree.ThrowsTree;
@@ -54,12 +53,7 @@ import jdk.javadoc.internal.doclets.toolkit.util.DocFinder.Input;
 import jdk.javadoc.internal.doclets.toolkit.util.Utils;
 
 /**
- * A taglet that represents the @throws tag.
- *
- *  <p><b>This is NOT part of any supported API.
- *  If you write code that depends on this, you do so at your own risk.
- *  This code and its internal interfaces are subject to change or
- *  deletion without notice.</b>
+ * A taglet that represents the {@code @throws} tag.
  */
 public class ThrowsTaglet extends BaseTaglet
     implements InheritableTaglet {
@@ -131,7 +125,7 @@ public class ThrowsTaglet extends BaseTaglet
             Map<String, TypeMirror> typeSubstitutions, TagletWriter writer) {
         Utils utils = writer.configuration().utils;
         Content result = writer.getOutputInstance();
-        if (utils.isExecutableElement(holder)) {
+        if (utils.isMethod(holder)) {
             Map<List<? extends ThrowsTree>, ExecutableElement> declaredExceptionTags = new LinkedHashMap<>();
             for (TypeMirror declaredExceptionType : declaredExceptionTypes) {
                 Input input = new DocFinder.Input(utils, holder, this,
@@ -166,7 +160,9 @@ public class ThrowsTaglet extends BaseTaglet
                 writer.getCurrentPageElement(), (ExecutableElement)holder);
         List<? extends TypeMirror> thrownTypes = instantiatedType.getThrownTypes();
         Map<String, TypeMirror> typeSubstitutions = getSubstitutedThrownTypes(
-                ((ExecutableElement) holder).getThrownTypes(), thrownTypes);
+                writer.configuration().utils.typeUtils,
+                ((ExecutableElement) holder).getThrownTypes(),
+                thrownTypes);
         Map<List<? extends ThrowsTree>, ExecutableElement> tagsMap = new LinkedHashMap<>();
         tagsMap.put(utils.getThrowsTrees(execHolder), execHolder);
         Content result = writer.getOutputInstance();
@@ -233,7 +229,8 @@ public class ThrowsTaglet extends BaseTaglet
      * @param instantiatedThrownTypes the thrown types in the context of the current type.
      * @return map of declared to instantiated thrown types or an empty map.
      */
-    private Map<String, TypeMirror> getSubstitutedThrownTypes(List<? extends TypeMirror> declaredThrownTypes,
+    private Map<String, TypeMirror> getSubstitutedThrownTypes(Types types,
+                                                              List<? extends TypeMirror> declaredThrownTypes,
                                                               List<? extends TypeMirror> instantiatedThrownTypes) {
         if (!instantiatedThrownTypes.equals(declaredThrownTypes)) {
             Map<String, TypeMirror> map = new HashMap<>();
@@ -242,11 +239,11 @@ public class ThrowsTaglet extends BaseTaglet
             while (i1.hasNext() && i2.hasNext()) {
                 TypeMirror t1 = i1.next();
                 TypeMirror t2 = i2.next();
-                if (!t1.equals(t2))
+                if (!types.isSameType(t1, t2))
                     map.put(t2.toString(), t1);
             }
             return map;
         }
-        return Collections.emptyMap();
+        return Map.of();
     }
 }
